etl-api/tests/integration/snapshots/r#mod__integration__destinations_pipelines_test__an_existing_destination_and_pipeline_can_be_updated-2.snap
---
source: etl-api/tests/integration/destinations_pipelines_test.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        BatchConfig {
            max_size: 2000,
            max_fill_ms: 10,
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    max_table_sync_workers: Some(
        4,
    ),
}
