etl-api/tests/integration/snapshots/r#mod__integration__destinations_pipelines_test__destination_and_pipeline_can_be_created-2.snap
---
source: etl-api/tests/integration/destinations_pipelines_test.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        BatchConfig {
            max_size: 1000,
            max_fill_ms: 5,
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    max_table_sync_workers: Some(
        2,
    ),
}
